<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.LoginPageFragment"
tools:ignore="ContentDescription">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <!--crear cuenta-->
    <Button
        android:id="@+id/btnGoToHome"
        android:layout_width="195dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="120dp"
        android:layout_marginTop="620dp"
        android:backgroundTint="@color/soft_blue"
        android:fontFamily="@font/jua"
        android:text="@string/login_string"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />
    <!--ya tiene cuenta-->
    <Button
        android:id="@+id/btnGoToNewSignup"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="664dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/jua"
        android:text="@string/create_new_account_string"
        android:textColor="@color/vivid_blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />
    <ImageView
        android:id="@+id/path"
        android:layout_width="285.5dp"
        android:layout_height="462dp"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="165dp"
        android:src="@drawable/path_green" />

    <ImageView
        android:id="@+id/path_ek1"
        android:layout_width="57.12dp"
        android:layout_height="54.48dp"
        android:layout_marginStart="282dp"
        android:layout_marginTop="109dp"
        android:src="@drawable/path_ek1_green" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/jua"
            android:text="@string/login_and_start_tran_string"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/jua"
            android:text="@string/email_string" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:hint="@string/enter_your_email_string" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jua"
            android:text="@string/password_string" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:hint="@string/enter_your_password_string" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="22.4dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="50dp"
            android:layout_marginTop="86dp"
            android:fontFamily="@font/jua"
            android:gravity="end"
            android:text="@string/forget_password_string"
            android:textColor="@color/soft_blue"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>