<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignupPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--
            &lt;!&ndash; boton crear cuenta &ndash;&gt;
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="620dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="315dp"
                    android:layout_height="49dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <View
                    android:layout_width="315dp"
                    android:layout_height="49dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/rectangle_shape"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="128.4dp"
                    android:layout_height="25.4dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginStart="95dp"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/jua"
                    android:gravity="center"
                    android:text="@string/crear_cuenta_string"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </RelativeLayout>
            &lt;!&ndash; ya tiene cuenta? -->
        <Button
            android:id="@+id/btnGoToSignup"
            android:layout_width="195dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="620dp"
            android:backgroundTint="@color/soft_blue"
            android:fontFamily="@font/jua"
            android:text="@string/create_account_string"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
        <!--ya tiene cuenta-->
        <Button
            android:id="@+id/btnGoToLogin"
            android:layout_width="195dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="664dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/jua"
            android:text="@string/already_have_account_string"
            android:textColor="@color/vivid_blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
        <ImageView
            android:id="@+id/path"
            android:layout_width="285.5dp"
            android:layout_height="462dp"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="165dp"
            android:src="@drawable/path_green" />

        <ImageView
            android:id="@+id/path_ek1"
            android:layout_width="57.12dp"
            android:layout_height="54.48dp"
            android:layout_marginStart="282dp"
            android:layout_marginTop="109dp"
            android:src="@drawable/path_ek1_green" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
        <!-- contraseña -->
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:text="@string/signup_and_start_tra_string"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jua"
            android:text="@string/name_string" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:hint="@string/enter_your_name_string" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jua"
            android:text="@string/lastname_string" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:hint="@string/enter_your_lastname_string" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jua"
            android:text="@string/email_string" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:hint="@string/enter_your_email_string" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jua"
            android:text="@string/password_string" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:hint="@string/enter_your_password_string" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jua"
            android:text="@string/re_enter_your_password_string" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/re_enter_your_password_string"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:hint="@string/re_enter_your_password_string" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>